@@ -1,3 +1,10 @@
+2009-02-02  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* inf-haskell.el (inferior-haskell-type, inferior-haskell-info):
+	Move after calling inferior-haskell-wait-for-prompt.
+	Reported by Thaju <ou2thaju@gmail.com> and
+	Jose A. Ortega Ruiz <jao@gnu.org>.
+
 2009-02-02  Juanma Barranquero  <lekktu@gmail.com>
 
 	* haskell-doc.el (haskell-doc-imported-list): Don't add current buffer
